--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#jane">Jane &amp; John</a></li>
         <li><a href="#wedding">Wedding</a></li>
-        <li><a href="#rsvp">RSVP</a></li>
+        <li><a href="#rsvp" class="last-link">RSVP</a></li>
     </ul>
   </nav>
 
     <section class="hero-section" id="home">
-        <img src="logo.png" alt="Wedding Logo" width="100%" height="auto" loading="lazy">
+        <img src="assets/logo.webp" alt="Wedding Logo" width="100%" height="auto" loading="lazy">
 
         <div class="container">
-            <h1 class="hero-title">
+            <h1 class="hero-title stylish">
                 Jane &amp; John
             </h1>
             <p class="hero-subtitle">are getting married</p>
@@ -31,10 +31,10 @@
     </section>
 
     <section class="info-section" id="jane">
-  <h2>
+  <h2 class="stylish">
     About Jane &amp; John
   </h2>
-  <img src="jane-john.jpg" alt="Jane & John" width="100%" height="auto" loading="lazy">
+  <img src="assets/jane-john.webp" alt="Jane & John" width="100%" height="auto" loading="lazy">
   <p>
     Jane and John met in college and have been inseparable ever since. They share a love for adventure, music,
      and spending time with family and friends. Their journey together has been filled with laughter, support,
@@ -50,7 +50,7 @@
     </section>
 
 <div class="card">
-    <img src="wedding-venue.jpg" alt="Wedding Venue" width="100%" height="auto" loading="lazy">
+    <img src="assets/wedding-venue.webp" alt="Wedding Venue" width="100%" height="auto" loading="lazy">
     <div class="card-content">
         <h2>
             You Are Invited
