--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         &copy; 2025 Jane & John. All rights reserved.
     </p>
     <p>
-        created by <a href="https://www.example.com">Muhammad Ishaq</a>
+        created by <a href="https://www.fiverr.com/ishaqkhanrind78">Muhammad Ishaq</a>
     </p>
  </footer>
 
