--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
+    <script src="sw.js"></script>
 </head>
 <body>
   <nav>
