--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <!-- Basic Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://example.com/">
+    <meta property="og:url" content="https://wedding-template-khan-code-88.vercel.app">
     <meta property="og:title" content="Elegant Wedding Invitation Templates | Khan Code 88">
     <meta property="og:description" content="Create stunning, customizable wedding invitation pages with stylish fonts and modern layouts. Perfect for your special day!">
-    <meta property="og:image" content="assets/wedding-ceremony.webp">
+    <meta property="og:image" content="https://wedding-template-khan-code-88.vercel.app/assets/wedding-ceremony.webp">
 
     <!-- Optional but Recommended -->
     <meta property="og:site_name" content="Khan Code 88 Wedding Templates">
@@ -22,27 +22,27 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Elegant Wedding Invitation Templates | Khan Code 88">
     <meta name="twitter:description" content="Design beautiful, customizable wedding invitations easily online. Try Khan Code 88!">
-    <meta name="twitter:image" content="assets/wedding-ceremony.webp">
+    <meta name="twitter:image" content="https://wedding-template-khan-code-88.vercel.app/assets/wedding-ceremony.webp">
 
     <!-- Standard favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://wedding-template-khan-code-88.vercel.app/assets/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 
     <!-- Apple Touch Icon (iPhone, iPad) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://wedding-template-khan-code-88.vercel.app/assets/apple-touch-icon.png">
 
     <!-- Android / Chrome -->
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="assets/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="https://wedding-template-khan-code-88.vercel.app/assets/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="https://wedding-template-khan-code-88.vercel.app/assets/android-chrome-512x512.png">
 
     <!-- Safari Pinned Tab -->
-    <link rel="mask-icon" href="assets/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="mask-icon" href="https://wedding-template-khan-code-88.vercel.app/assets/safari-pinned-tab.svg" color="#5bbad5">
 
     <!-- Manifest (for PWA apps) -->
-    <link rel="manifest" href="assets/site.webmanifest">
+    <link rel="manifest" href="https://wedding-template-khan-code-88.vercel.app/assets/site.webmanifest">
 
     <!-- Fallback -->
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="shortcut icon" href="https://wedding-template-khan-code-88.vercel.app/assets/favicon.ico">
 
 
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
