--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!-- Standard favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="https://wedding-template-khan-code-88.vercel.app/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://wedding-template-khan-code-88.vercel.app/assets/favicon-16x16.png">
 
     <!-- Apple Touch Icon (iPhone, iPad) -->
     <link rel="apple-touch-icon" sizes="180x180" href="https://wedding-template-khan-code-88.vercel.app/assets/apple-touch-icon.png">
